ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/CAM__c.object-meta.xml
<CustomObject>
    <label>CAM</label>
    <nameField>
        <displayFormat>CAM-{00000000}</displayFormat>
        <label>CAM Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAMS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>