ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CAMS</relationshipLabel>
    <relationshipName>CAMS</relationshipName>
    <type>Lookup</type>
</CustomField>