ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the CAM is active default is true</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>