ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/BE_CVO_Remark__c.field-meta.xml
<CustomField>
    <fullName>BE_CVO_Remark__c</fullName>
    <description>Remark added by BE/CVO at the time of submitting the CAM.</description>
    <label>BE/CVO Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>