ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/CAM_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>CAM_Approval_Date__c</fullName>
    <label>CAM Approval Date</label>
    <type>DateTime</type>
</CustomField>