ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/CAM_Conditional_approval_remarks__c.field-meta.xml
<CustomField>
    <fullName>CAM_Conditional_approval_remarks__c</fullName>
    <label>CAM Conditional approval remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>