ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/CAM_conditional_approval_requirement__c.field-meta.xml
<CustomField>
    <fullName>CAM_conditional_approval_requirement__c</fullName>
    <label>CAM conditional approval requirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>