ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/CAM_Page__c.field-meta.xml
<CustomField>
    <fullName>CAM_Page__c</fullName>
    <formula>HYPERLINK(&quot;/apex/IBLCAMPage?id=&quot;+Id, &quot;CAM Page&quot; ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAM Page</label>
    <type>Text</type>
</CustomField>