ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/CAM_Sanction_date__c.field-meta.xml
<CustomField>
    <fullName>CAM_Sanction_date__c</fullName>
    <description>Date when CAM is sanctioned on CAM and Approval page.</description>
    <label>CAM Sanction date</label>
    <type>Date</type>
</CustomField>