ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/CAM_Status__c.field-meta.xml
<CustomField>
    <fullName>CAM_Status__c</fullName>
    <label>CAM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending for approval</fullName>
            </value>
            <value>
                <fullName>Forwarded to you</fullName>
            </value>
            <value>
                <fullName>Not approved by SCM</fullName>
            </value>
            <value>
                <fullName>Hold by you</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>