ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/CAM_Submitted_by_ACM_SCM__c.field-meta.xml
<CustomField>
    <fullName>CAM_Submitted_by_ACM_SCM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAM Submitted by ACM/SCM</label>
    <type>Checkbox</type>
</CustomField>