ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>