ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/CCC_Exposure_Editable__c.field-meta.xml
<CustomField>
    <fullName>CCC_Exposure_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCC Exposure Editable</label>
    <type>Checkbox</type>
</CustomField>