ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Committee__c.field-meta.xml
<CustomField>
    <fullName>Committee__c</fullName>
    <label>Committee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>BCC</fullName>
            </value>
            <value>
                <fullName>SCC</fullName>
            </value>
            <value>
                <fullName>ZCC</fullName>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>COCC1</fullName>
            </value>
            <value>
                <fullName>COCC2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>