ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Conditional_Approval__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Approval__c</fullName>
    <description>Comments to be given at the time of Conditionally approving the proposal.</description>
    <label>Conditional Approval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>