ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Credit_Analyst_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Credit_Analyst_Remarks__c</fullName>
    <label>Credit Analyst Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>