ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Deviation_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Approval_Status__c</fullName>
    <description>This has the overall status for the deviations.</description>
    <label>Deviation Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Waiting for the Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>