ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Deviation_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Created_Date__c</fullName>
    <label>Deviation Created Date</label>
    <type>Date</type>
</CustomField>