ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Deviation_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Created_Date_Time__c</fullName>
    <label>Deviation Created Date Time</label>
    <type>DateTime</type>
</CustomField>