ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Deviation_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Created_Time__c</fullName>
    <label>Deviation Created Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>