ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Deviations_Approved_By_Authorities__c.field-meta.xml
<CustomField>
    <fullName>Deviations_Approved_By_Authorities__c</fullName>
    <formula>Total_Deviations__c ==  Total_Deviations_Proposal_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deviations Approved By Authorities?</label>
    <type>Checkbox</type>
</CustomField>