ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>Generation_Date__c</fullName>
    <description>CAM Generation date</description>
    <label>Generation Date</label>
    <type>Date</type>
</CustomField>