ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_Date__c</fullName>
    <label>Hold Date</label>
    <type>DateTime</type>
</CustomField>