ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Is_CAM_Reopen__c.field-meta.xml
<CustomField>
    <fullName>Is_CAM_Reopen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CAM Reopen</label>
    <type>Checkbox</type>
</CustomField>