ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Is_Hold__c.field-meta.xml
<CustomField>
    <fullName>Is_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hold</label>
    <type>Checkbox</type>
</CustomField>