ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Level_of_Hold_User__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Hold_User__c</fullName>
    <label>Level of Hold User</label>
    <length>10</length>
    <type>Text</type>
</CustomField>