ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <description>Loan Amount of the CAM</description>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>