ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/No_of_Days_Pending__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_Pending__c</fullName>
    <formula>TODAY() - Deviation_Created_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Days Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>