ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Productivity_YTD__c.field-meta.xml
<CustomField>
    <fullName>Productivity_YTD__c</fullName>
    <description>Productivity year to date</description>
    <label>Productivity(YTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>