ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Proposal_Status__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Status__c</fullName>
    <description>Final Approval Status (possible values Accept, Reject and Withdrawn)</description>
    <label>Proposal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>