ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Required_CRM_IRR__c.field-meta.xml
<CustomField>
    <fullName>Required_CRM_IRR__c</fullName>
    <description>Required CRM IRR also called Net IRR</description>
    <label>Required CRM IRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>