ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/SCM_Approval__c.field-meta.xml
<CustomField>
    <fullName>SCM_Approval__c</fullName>
    <label>SCM Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not approved</fullName>
            </value>
            <value>
                <fullName>SCM not available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>