ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Submit_for_Approval_UserId__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_Approval_UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submit for Approval_UserId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CAMS</relationshipName>
    <type>Lookup</type>
</CustomField>