ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Total_Deviations__c.field-meta.xml
<CustomField>
    <fullName>Total_Deviations__c</fullName>
    <label>Total Deviations</label>
    <summaryForeignKey>Deviation__c.Parent_CAM__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>