ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Total_Deviations_Proposal_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Deviations_Proposal_Count__c</fullName>
    <label>Total Deviations Proposal Count</label>
    <summaryFilterItems>
        <field>Deviation__c.Proposal_Status__c</field>
        <operation>equals</operation>
        <value>Hold, Approved, Conditional Approved, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Deviation__c.Parent_CAM__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>