ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Trigger_Deviations__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Deviations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to highlight when trigger deviations is done.</description>
    <label>Trigger Deviations?</label>
    <type>Checkbox</type>
</CustomField>