ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/fields/Weighted_IRR_YTD__c.field-meta.xml
<CustomField>
    <fullName>Weighted_IRR_YTD__c</fullName>
    <description>Weighted IRR</description>
    <label>Weighted IRR (YTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>