ProdIND/ProdPrograms/force-app/main/default/objects/CAM__c/listViews/CAM_List.listView-meta.xml
<ListView>
    <fullName>CAM_List</fullName>
    <columns>Loan_Application__c</columns>
    <columns>Proposal_Status__c</columns>
    <columns>NAME</columns>
    <columns>CAM_Page__c</columns>
    <filterScope>Everything</filterScope>
    <label>List of Applications</label>
</ListView>